# PhysicalDataPopulation_old

./: .gitignore  MANIFEST.in  license.txt  readme.rst  requirements.txt  setup.cfg  setup.py
Physical_data_population/: file_readers.py  file_readers_CGI.py  physical_data_population.py  physical_data_population_sd.py  profile_reader.py  read_CLI_n_run.py  read_CLI_n_run_temp.py  read_configuration.py  stitch_antennas_txt.py
Physical_data_population/config/: band_relation  config_phy.ini  pattern.py  sample_config.ini
Physical_data_population/pypi/: pyxlsb-1.0.6-py2.py3-none-any.whl
Physical_data_population/temp_file/: sample_temp
Physical_data_population/temp_files/: antennas.txt  lte_carriers.txt
