[metadata]
name = phyDataPopulation
version = 0.2
description = "Create antennas.txt for physical data collection input"
long_description = file:readme.rst
license = Apache 2.0
author = Swapan kumar Das
author_email = swapankumar.das@teoco.com

[options]
packages = find:
include_package_data=True
install_requires=
    selenium
    python3.7
