[metadata]
name = phyDataPopulation
author = Swapan kumar Das
author_email = swapankumar.das@teoco.com
version = 1.0.3
description = "Create antennas.txt for physical data collection input"
long_description = file:readme.md
long_description_type = text/markdown
python_requires = >=3.5
License = MIT License
# To create license.txt file Choosealicense.com

# for complete classifiers check https://pypi.org/classifiers/
classifiers=
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Operating System :: Microsoft :: Windows


[options]
package_dir =
    = .
packages = find:
include_package_data=True
